--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -175,6 +175,8 @@ fieldset[disabled] .btn-xl.active {
     background-color: #222;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
+
 .navbar-default .navbar-brand {
     font-family: "Permanent Marker","Helvetica Neue",Helvetica,Arial,cursive;
     color: #{{ site.data.template.color.primary }};
