--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted"><strong>The easiest way to contact me is by filling out the form below—all messages go straight to my email inbox!</strong><<br>
+                    <h3 class="section-subheading text-muted"><strong>The easiest way to contact me is by filling out the form below—all messages go straight to my email inbox!</strong><br>
                             Make sure to double-check your email address so I can email you back.</h3>
                 </div>
             </div>
