--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -680,6 +680,10 @@ section#contact .section-heading {
     color: #fff;
 }
 
+section#contact .section-subheading {
+    color: #fff;
+}
+
 section#contact .form-group {
     margin-bottom: 25px;
 }
