--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -678,6 +678,7 @@ section#contact {
 
 section#contact .section-heading {
     color: #fff;
+    line-height: 1.75;
 }
 
 section#contact .section-subheading {
